# knight-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.org  example-config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: cfg.rs  init.rs  main.rs
src/plugins/: anyone.rs  aur.rs  cat.rs  dl.rs  dlp.rs  dog.rs  eightball.rs  fact.rs  flipcoin.rs  help.rs  ipa.rs  joke.rs  link.rs  lpaste.rs  luck.rs  magisk.rs  man.rs  mod.rs  mot.rs  msg.rs  neo.rs  paste.rs  ping.rs  plant.rs  probe.rs  req.rs  rtfm.rs  run.rs  sauce.rs  sh.rs  smsg.rs  start.rs  uid.rs  ul.rs  urb.rs  webshot.rs  whois.rs  yaap.rs
