[package]
name = "knight-bot"
version = "1.0.0"
authors = ["Cyber Knight <npv12@iitbbs.ac.in>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.3"
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
librustbin = "0.2.0"
log = { version = "0.4.27" }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.8.20"

[features]
default = ["html", "markdown"]
html = ["grammers-client/html"]
markdown = ["grammers-client/markdown"]
