[package]
name = "knight-bot"
version = "1.0.0"
authors = ["Cyber Knight <npv12@iitbbs.ac.in>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.4"
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "8169db7f1fe86896ca4f591f6d424be3cb4f192a" }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "8169db7f1fe86896ca4f591f6d424be3cb4f192a" }
librustbin = { git = "https://github.com/cyberknight777/librustbin" }
log = { version = "0.4.29" }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.9.11"
html-escape = "0.2.13"

[features]
default = ["html", "markdown"]
html = ["grammers-client/html"]
markdown = ["grammers-client/markdown"]
