[package]
name = "knight-bot"
version = "1.0.0"
authors = ["Cyber Knight <cyberknight755@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.4"
grammers-client = { git = "https://codeberg.org/Lonami/grammers" }
grammers-session = { git = "https://codeberg.org/Lonami/grammers" }
librustbin = { git = "https://github.com/cyberknight777/librustbin" }
log = { version = "0.4.30" }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
html-escape = "0.2.13"

[features]
default = ["html", "markdown"]
html = ["grammers-client/html"]
markdown = ["grammers-client/markdown"]
